--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.8.1",
     "formidable": "^3.5.2",
     "mongoose": "^8.11.0",
-    "next": "15.1.7",
+    "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5"
